Fixing scrollbar hide issue and added no-scrollbar css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,7 @@ body {
     transform: translateX(-100%);
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
